--- a/G.html
+++ b/G.html
@@ -24,7 +24,7 @@
 
 
     <a href="GG.html" class="btn btn-default" style="padding-left: 10%; padding-top: 10%; font-size: 24px; font-family: Consolas; -webkit-animation: KEYFRAME-NAME 20s forwards; -moz-animation:    KEYFRAME-NAME 20s forwards; -o-animation: KEYFRAME-NAME 20s forwards; animation: KEYFRAME-NAME 20s forwards; -webkit-animation-fill-mode: forwards;">No, I'm intrigued.</a>
-    <a href="GB.html" class="btn btn-default" style="padding-left: 10%; padding-top: 10%; font-size: 24px; font-family: Consolas;  -webkit-animation: KEYFRAME-NAME 20s forwards; -moz-animation:    KEYFRAME-NAME 20s forwards; -o-animation: KEYFRAME-NAME 20s forwards; animation: KEYFRAME-NAME 20s forwards;">Yeah, actually. What the fuck's going on?</a>
+    <a href="GB.html" class="btn btn-default" style="padding-left: 10%; padding-top: 10%; font-size: 24px; font-family: Consolas;  -webkit-animation: KEYFRAME-NAME 20s forwards; -moz-animation:    KEYFRAME-NAME 20s forwards; -o-animation: KEYFRAME-NAME 20s forwards; animation: KEYFRAME-NAME 20s forwards;">Yeah, what the hell's going on?</a>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
