--- a/whatNow.html
+++ b/whatNow.html
@@ -23,8 +23,8 @@
     <div class="typed-cursor" style="display: inline"></div>
 
 
-    <a href="http://www.twitter.com/serenabtaylor" class="btn btn-default" style="padding-left: 10%; padding-top: 10%; font-size: 24px; font-family: Consolas">TWITTER.</a>
-    <a href="http://www.sb-taylor.tumblr.com" class="btn btn-default" style="padding-left: 10%; padding-top: 10%; font-size: 24px; font-family: Consolas">TUMBLR.</a>
+    <a href="http://www.twitter.com/serenabtaylor" class="btn btn-default" style="padding-left: 10%; padding-top: 10%; font-size: 24px; font-family: Consolas">CHOOSE.</a>
+<!--     <a href="http://www.sb-taylor.tumblr.com" class="btn btn-default" style="padding-left: 10%; padding-top: 10%; font-size: 24px; font-family: Consolas">TUMBLR.</a> -->
     <!-- <a href="noSM.html" class="btn btn-default" style="padding-left: 10%; padding-top: 10%; font-size: 24px; font-family: Consolas;-webkit-animation: KEYFRAME-NAME 30s forwards; -moz-animation:    KEYFRAME-NAME 30s forwards; -o-animation: KEYFRAME-NAME 30s forwards; animation: KEYFRAME-NAME 30s forwards">We could do with less of it.</a> -->
 
     <!-- Optional JavaScript -->
